--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <title>Conway's Game of Life</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
   </head>
 
